--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -42,6 +42,9 @@
 		<script type="text/javascript" th:src="@{/modules/home/controllers/casalar/casa-lar-controller.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/casalar/popup/selecionar-casa-lar-controller-popup.js}"></script>
 		
+		<script type="text/javascript" th:src="@{/modules/home/controllers/evento/evento-controller.js}"></script>
+		<script type="text/javascript" th:src="@{/modules/home/controllers/evento/popup/selecionar-papel-controller-popup.js}"></script>
+		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/redeapoio/popup/selecionar-rede-apoio-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/redeapoio/rede-apoio-controller.js}"></script>
 		
