--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/file/reports/questionario/imprimir/template-imprimir-questionario.jrxml
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/file/reports/questionario/imprimir/template-imprimir-questionario.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="imprimirQuestionario" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="96bf6a3c-e3ab-454a-ad5f-47caf3affdf7">
 	<property name="ireport.zoom" value="1.1000000000000005"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="8"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -121,24 +121,54 @@ where versao.id = $P{versao_questionario_id}]]>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="120" splitType="Stretch">
+		<band height="159" splitType="Stretch">
 			<image>
 				<reportElement x="0" y="2" width="102" height="86" uuid="8fab06a1-f466-4c9d-bbe8-9988bc28643d"/>
 				<imageExpression><![CDATA[$P{logo_DIR}]]></imageExpression>
 			</image>
-			<textField>
-				<reportElement x="341" y="17" width="100" height="20" uuid="9f8e6307-1fd5-4e2d-8193-f2740fd88d1a"/>
+			<textField isStretchWithOverflow="true">
+				<reportElement x="256" y="4" width="297" height="20" isPrintWhenDetailOverflows="true" uuid="9f8e6307-1fd5-4e2d-8193-f2740fd88d1a"/>
+				<textElement verticalAlignment="Top">
+					<font size="14" isBold="true"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="144" y="2" width="109" height="22" uuid="6178be4d-2407-4919-8916-e4003c1f48af"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Questionário: ]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="10" y="105" width="44" height="22" uuid="838488d0-f19d-40a8-a1a2-0742629a31f1"/>
+				<textElement verticalAlignment="Middle">
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Nome: ]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="10" y="127" width="62" height="22" uuid="5a7a0d2d-edc1-4a7f-9865-95e66c699922"/>
+				<textElement verticalAlignment="Middle">
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Telefone: ]]></text>
+			</staticText>
+			<line>
+				<reportElement x="2" y="151" width="551" height="1" uuid="5fe759a5-45c6-432d-9421-bce7cf1b5f2a"/>
+			</line>
+			<textField>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="123" y="68" width="133" height="20" isPrintWhenDetailOverflows="true" uuid="18e68f28-1fe0-4887-b7ca-8d33fb3802f5"/>
+				<textFieldExpression><![CDATA[$F{descricao}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
 	<detail>
-		<band height="64" splitType="Stretch"/>
 		<band height="124" splitType="Prevent">
 			<elementGroup/>
 			<elementGroup/>
 			<subreport>
-				<reportElement x="0" y="0" width="200" height="100" uuid="db986064-ca6f-41e5-bbc4-1a234c9c71ac"/>
+				<reportElement x="0" y="0" width="553" height="124" uuid="db986064-ca6f-41e5-bbc4-1a234c9c71ac"/>
 				<subreportParameter name="versao_questionario_id">
 					<subreportParameterExpression><![CDATA[$P{versao_questionario_id}]]></subreportParameterExpression>
 				</subreportParameter>
