--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/file/reports/questionario/imprimir/template-imprimir-questionario_questoes.jrxml
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/file/reports/questionario/imprimir/template-imprimir-questionario_questoes.jrxml
@@ -5,32 +5,62 @@
 	<property name="ireport.y" value="0"/>
 	<parameter name="versao_questionario_id" class="java.lang.Long"/>
 	<queryString>
-		<![CDATA[select * from public.questao where versao_questionario_id = $P{versao_questionario_id}]]>
+		<![CDATA[select * from public.questao where versao_questionario_id = $P{versao_questionario_id} AND enabled = TRUE]]>
 	</queryString>
 	<field name="id" class="java.lang.Long"/>
 	<field name="created" class="java.sql.Timestamp"/>
 	<field name="updated" class="java.sql.Timestamp"/>
 	<field name="descricao" class="java.lang.String"/>
+	<field name="enabled" class="java.lang.Boolean"/>
 	<field name="tipo_questao" class="java.lang.Integer"/>
 	<field name="versao_questionario_id" class="java.lang.Long"/>
 	<variable name="numero_questao" class="java.lang.Long" calculation="Count">
 		<initialValueExpression><![CDATA[1]]></initialValueExpression>
 	</variable>
+	<variable name="variable1" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<detail>
-		<band height="72" splitType="Stretch">
-			<textField>
-				<reportElement x="43" y="5" width="512" height="20" uuid="2a929a55-68ba-42a7-aeec-27c646f2604c"/>
-				<textElement textAlignment="Justified" verticalAlignment="Middle"/>
+		<band height="123" splitType="Stretch">
+			<textField isStretchWithOverflow="true">
+				<reportElement x="20" y="9" width="535" height="16" isPrintWhenDetailOverflows="true" uuid="2a929a55-68ba-42a7-aeec-27c646f2604c"/>
+				<textElement verticalAlignment="Top"/>
 				<textFieldExpression><![CDATA[$F{descricao}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="5" width="43" height="20" uuid="4ddd7d4a-b010-4b78-9b29-be374430b432"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<reportElement x="0" y="5" width="20" height="20" uuid="4ddd7d4a-b010-4b78-9b29-be374430b432"/>
+				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$V{numero_questao} + "."]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="45" y="40" width="30" height="20" uuid="85b7c2ea-747a-4a9b-ad16-a6c9eaf9281c">
+					<printWhenExpression><![CDATA[$F{tipo_questao} == 1]]></printWhenExpression>
+				</reportElement>
+				<textElement textAlignment="Justified">
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Sim]]></text>
+			</staticText>
+			<rectangle>
+				<reportElement x="25" y="38" width="13" height="14" uuid="a0aca4bd-0bdd-47f2-852c-cf476eba665b">
+					<printWhenExpression><![CDATA[$F{tipo_questao} == 1]]></printWhenExpression>
+				</reportElement>
+			</rectangle>
+			<rectangle>
+				<reportElement x="88" y="38" width="13" height="14" uuid="cdf39d45-30ca-4c28-a0db-902a10f9ee90">
+					<printWhenExpression><![CDATA[$F{tipo_questao} == 1]]></printWhenExpression>
+				</reportElement>
+			</rectangle>
+			<staticText>
+				<reportElement x="108" y="40" width="30" height="20" uuid="fd9efed3-0794-4c32-9ba0-6686933b286a">
+					<printWhenExpression><![CDATA[$F{tipo_questao} == 1]]></printWhenExpression>
+				</reportElement>
+				<textElement textAlignment="Justified">
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Não]]></text>
+			</staticText>
 		</band>
 	</detail>
 </jasperReport>
