Relatório produto adquirido

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -58,6 +58,7 @@
 		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-marca-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-modelo-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-produto-controller-popup.js}"></script>
+		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-only-produto-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/produto/popup/selecionar-produto-repassado-controller-popup.js}"></script>
 		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/avaliacaoindividual/popup/selecionar-crianca-controller-popup.js}"></script>
@@ -74,6 +75,9 @@
 		<script type="text/javascript" th:src="@{/modules/home/controllers/aquisicaoproduto/popup/selecionar-fornecedor-controller-popup.js}"></script>
 		
 		<script type="text/javascript" th:src="@{/modules/home/controllers/repasse/repasse-controller.js}"></script>
+		
+		<!-- Reports -->
+		<script type="text/javascript" th:src="@{/modules/home/controllers/report/produto-report-controller.js}"></script>
 		
 		<!-- maskMoney -->
 		<script type="text/javascript" th:src="@{/static/js/jquery.maskMoney.js}"></script>
