--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -78,6 +78,7 @@
 		
 		<!-- Reports -->
 		<script type="text/javascript" th:src="@{/modules/home/controllers/report/produto-report-controller.js}"></script>
+		<script type="text/javascript" th:src="@{/modules/home/controllers/report/caixa-report-controller.js}"></script>
 		
 		<!-- maskMoney -->
 		<script type="text/javascript" th:src="@{/static/js/jquery.maskMoney.js}"></script>
