--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/report/caixa/movimentacao-conta.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/report/caixa/movimentacao-conta.html
@@ -29,15 +29,15 @@
 													<div layout="row" layout-align="start center" style="height: 48px;">
 														<label>De:</label>
 														<div>
-															<md-datepicker ng-model="model.relatorio.produtosAdquiridos.filters.dataInicio" required></md-datepicker>
+															<md-datepicker ng-model="model.relatorio.movimentacaoConta.filters.dataInicio" required></md-datepicker>
 														</div>
 													
 														<label style="margin-left: 30px;">Até:</label>
 														<div>
 															<md-datepicker
-																ng-model="model.relatorio.produtosAdquiridos.filters.dataFim"
-																md-min-date="model.relatorio.produtosAdquiridos.filters.dataInicio"
-																ng-disabled="model.relatorio.produtosAdquiridos.filters.dataInicio == null"
+																ng-model="model.relatorio.movimentacaoConta.filters.dataFim"
+																md-min-date="model.relatorio.movimentacaoConta.filters.dataInicio"
+																ng-disabled="model.relatorio.movimentacaoConta.filters.dataInicio == null"
 																required>
 															</md-datepicker>
 														</div>
@@ -49,53 +49,11 @@
 								            	
 								            	<div layout="row">
 									            	<div class="default-info" layout="column" flex> 
-														<span>Produtos</span>
+														<span>Contas</span>
 													</div>
 													
 													<div md-theme="default" layout="column" class="default-header md-primary md-hue-3">
-												        <md-button class="md-raised" ng-click="openSelecionarProduto(false)">Selecionar produto</md-button>
-											        </div>
-												</div>
-												
-												<md-table-container>
-												  <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
-												    <thead md-head md-order="query.order">
-												      <tr md-row>
-												        <th md-column md-order-by="">Nome</th>
-												        <th md-column md-order-by="">Categoria</th>
-												        <th md-column md-order-by="">Quantidade em estoque</th>
-												      </tr>
-												    </thead>
-												    
-												    <tbody md-body>
-												      <tr md-row style="cursor:pointer" ng-repeat="produto in model.relatorio.produtosAdquiridos.filters.produtos">
-												        <td md-cell>{{::produto.nome}}</td>
-												        <td md-cell>{{::produto.categoria.nome}}</td>
-												        <td md-cell>{{::produto.quantidade}}</td>
-												        <td md-cell>{{::produto.valor}}</td>
-												        <td md-cell><i class="zmdi zmdi-delete" style="font-size: 20px;" ng-click="removeProduto(produto, $index)" ></i></td>
-												      </tr>
-												    </tbody>
-												  </table>
-												</md-table-container>
-										        
-										        <md-divider></md-divider>
-										        
-										        <div layout="column" flex class="empty-grid" layout-align="center center" ng-if="model.relatorio.produtosAdquiridos.filters.produtos == 0">
-													Não há nenhum produto selecionado . 
-												</div>
-												
-								            </div>
-								            
-								            <div id="selectProdutos" style="margin-top:40px">
-								            	
-								            	<div layout="row">
-									            	<div class="default-info" layout="column" flex> 
-														<span>Fornecedores</span>
-													</div>
-													
-													<div md-theme="default" layout="column" class="default-header md-primary md-hue-3">
-												        <md-button class="md-raised" ng-click="openSelecionarFornecedor(false)">Selecionar fornecedor</md-button>
+												        <md-button class="md-raised" ng-click="openSelecionarConta(false)">Selecionar conta</md-button>
 											        </div>
 												</div>
 												
@@ -103,28 +61,26 @@
 												  <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
 												    <thead md-head md-order="query.order" md-on-reorder="getDesserts">
 												      <tr md-row>
-												        <th md-column md-order-by="nameToLower"><span>Razao Social</span></th>
-												        <th md-column md-order-by="nameToLower"><span>Cnpj</span></th>
-												        <th md-column md-order-by="nameToLower"><span>Telefone</span></th>
-												        <th md-column md-order-by="nameToLower"><span>Responsavel</span></th>
+												        <th md-column><span>Nome</span></th>
+												        <th md-column><span>Descrição</span></th>
+												        <th md-column md-numeric><span>Saldo</span></th>
 												      </tr>
 												    </thead>
 												    <tbody md-body>
-												      <tr md-row md-select="dessert" style="cursor:pointer" md-select-id="name" md-auto-select ng-repeat="fornecedor in model.relatorio.produtosAdquiridos.filters.fornecedores">
-												        <td md-cell >{{::fornecedor.razaoSocial}}</td>
-												        <td md-cell >{{::fornecedor.cnpj}}</td>
-												        <td md-cell >{{::fornecedor.telefone}}</td>
-												        <td md-cell >{{::fornecedor.responsavel.nome}}</td>
-												        <td md-cell><i class="zmdi zmdi-delete" style="font-size: 20px;" ng-click="removeFornecedor(produto, $index)" ></i></td>
+												      <tr md-row md-select="dessert" style="cursor:pointer" md-select-id="name" md-auto-select ng-repeat="conta in model.relatorio.movimentacaoConta.filters.contas">
+												        <td md-cell >{{::conta.nome}}</td>
+												        <td md-cell >{{::conta.descricao}}</td>
+												        <td md-cell >{{::conta.saldo}}</td>
+												        <td md-cell><i class="zmdi zmdi-delete" style="font-size: 20px;" ng-click="removeConta(conta, $index)" ></i></td>
 												      </tr>
 												    </tbody>
 												  </table>
 												</md-table-container>
-										        
+												
 										        <md-divider></md-divider>
 										        
-										        <div layout="column" flex class="empty-grid" layout-align="center center" ng-if="model.relatorio.produtosAdquiridos.filters.fornecedores == 0">
-													Não há nenhum fornecedor selecionado . 
+										        <div layout="column" flex class="empty-grid" layout-align="center center" ng-if="model.relatorio.movimentacaoConta.filters.produtos == 0">
+													Não há nenhum produto selecionado . 
 												</div>
 												
 								            </div>
