--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -116,7 +116,7 @@
 					
 					<md-menu-content>
  						<md-menu-item>
-				          	<md-button>
+				          	<md-button ng-click="perfil()">
 				            	<md-icon class="zmdi zmdi-account zmdi-hc-lg"></md-icon>
 				            	Perfil
 				          	</md-button>
