--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/movimentacao/movimentacao-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/movimentacao/movimentacao-form.html
@@ -132,7 +132,7 @@
 									                </div>
 									            </md-input-container>
 									            
-									            <md-input-container layout="column" flex="10">
+									            <md-input-container layout="column" flex="10" ng-if>
 										    		<label>Saldo</label>
 										    		<input type="text" name="saldoOrigem" disabled ng-model="model.movimentacao.entity.contaOrigem.saldo">
 									            </md-input-container>
