--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/produto/popup/selecionar-produto-modal.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/produto/popup/selecionar-produto-modal.html
@@ -32,6 +32,7 @@
 						      <tr md-row>
 						        <th md-column md-order-by="">Nome</th>
 						        <th md-column md-order-by="">Categoria</th>
+						        <th md-column md-order-by="">Quantidade</th>
 						      </tr>
 						    </thead>
 						    
@@ -39,6 +40,7 @@
 						      <tr md-row style="cursor:pointer" ng-click="setSelectedEntity( produto )" ng-repeat="produto in model.produto.page.content">
 						        <td md-cell>{{::produto.nome}}</td>
 						        <td md-cell>{{::produto.categoria.nome}}</td>
+						        <td md-cell>{{::produto.categoria.quantidade}}</td>
 						      </tr>
 						    </tbody>
 						  </table>
