--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/repasse/repasse-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/repasse/repasse-form.html
@@ -21,7 +21,7 @@
 		        <md-button class="md-raised md-accent default-save-button" ng-click="changeToAprovado()">Aprovar</md-button>
 	        </div>
 	        
-	        <div md-theme="default" layout="row" layout-align="end center" ng-if="model.repasse.entity.status != 'CONCLUIDO'" class="default-header md-primary md-hue-3">
+	        <div md-theme="default" layout="row" layout-align="end center" ng-if="model.repasse.entity.status != 'APROVADO'" class="default-header md-primary md-hue-3">
 		        <md-button class="md-raised md-accent default-save-button" ng-click="insertRepasse()">Salvar</md-button>
 	        </div>
 	        
