--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/menu-sidenav.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/menu-sidenav.html
@@ -63,11 +63,11 @@
 				Produto
 			</md-button>
 			
-			<md-button ng-if="hasPermission('ATENDENTE')" style="text-align: left;"
-				ng-click="toggleMenuSideNavHandler('avaliacao-individual.list');">
-				<md-icon class="zmdi zmdi-accounts zmdi-hc-fw zmdi-hc-2x"></md-icon>
-				Avaliação indivídual
-			</md-button>
+<!-- 			<md-button ng-if="hasPermission('ATENDENTE')" style="text-align: left;" -->
+<!-- 				ng-click="toggleMenuSideNavHandler('avaliacao-individual.list');"> -->
+<!-- 				<md-icon class="zmdi zmdi-accounts zmdi-hc-fw zmdi-hc-2x"></md-icon> -->
+<!-- 				Avaliação indivídual -->
+<!-- 			</md-button> -->
 			
 			<md-button ng-if="hasPermission('OPERADOR_ATENDIMENTOS')" style="text-align: left;"
 				ng-click="toggleMenuSideNavHandler('crianca.list');">
